<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/termsDialogMainCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/cancelIv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/grey_700" />

            <TextView
                android:id="@+id/addWalletHeaderTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/popins_700"
                android:text="@string/add_amount_to_wallet"
                android:textAlignment="center"
                android:textColor="@color/grey_80"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancelIv" />

            <EditText
                android:id="@+id/enterAmountToAddEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="creditCardSecurityCode"
                android:background="@null"
                android:fontFamily="@font/popins_700"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
                android:maxLength="13"
                android:textAlignment="center"
                android:textColor="@color/grey_90"
                android:textColorHint="@color/grey_60"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@id/addWalletHeaderTv"
                app:layout_constraintStart_toStartOf="@id/addWalletHeaderTv"
                app:layout_constraintTop_toBottomOf="@id/addWalletHeaderTv" />

            <TextView
                android:id="@+id/descAddAmountToWalletTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_amount_to_wallet_desc"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                android:textColor="@color/grey_80"
                android:fontFamily="@font/popins_600"
                app:layout_constraintTop_toBottomOf="@id/enterAmountToAddEt"
                />

            <Button
                android:id="@+id/addAmountBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="true"
                android:fontFamily="@font/popins_600"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:backgroundTint="@color/green_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descAddAmountToWalletTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>