<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/termsDialogMainCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/cancelIv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/grey_700" />

            <TextView
                android:id="@+id/addHeaderTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/popins_700"
                android:text="@string/add_amount_to_pay"
                android:textAlignment="center"
                android:textColor="@color/grey_80"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancelIv" />

            <EditText
                android:id="@+id/enterAmountToPayEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="creditCardSecurityCode"
                android:background="@null"
                android:fontFamily="@font/popins_700"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:textAlignment="center"
                android:textColor="@color/grey_90"
                android:textColorHint="@color/grey_60"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@id/addHeaderTv"
                app:layout_constraintStart_toStartOf="@id/addHeaderTv"
                app:layout_constraintTop_toBottomOf="@id/addHeaderTv" />

            <TextView
                android:id="@+id/payingToTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_600"
                android:text="@string/receiver_name"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@color/deep_orange_400"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterAmountToPayEt" />

            <androidx.cardview.widget.CardView
                android:id="@+id/paymentMethodCv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#EBE7E7"
                app:cardCornerRadius="30dp"
                android:visibility="visible"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payingToTv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">

                    <!-- Selected Payment Method -->
                    <TextView
                        android:id="@+id/selectedPaymentMethodTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/popins_600"
                        android:hint="@string/select_payment_method"
                        android:textColor="@color/grey_90"
                        android:textSize="13.5sp"
                        android:paddingTop="4dp"
                        android:textColorHint="@color/grey_40"
                        android:layout_marginStart="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/dropdownIconIv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Dropdown Arrow -->
                    <ImageView
                        android:id="@+id/dropdownIconIv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@null"
                        android:paddingStart="11dp"
                        android:paddingEnd="11dp"
                        android:paddingBottom="11dp"
                        android:paddingTop="14dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/arrow_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/grey_60" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/descAddAmountToWalletTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/popins_600"
                android:text="@string/pay_amount_to_desc"
                android:textAlignment="center"
                android:textColor="@color/grey_80"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/paymentMethodCv" />

            <Button
                android:id="@+id/payAmountBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="true"
                android:fontFamily="@font/popins_600"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:backgroundTint="@color/green_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descAddAmountToWalletTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>